Added OPD code and OPD progressive in year fields

--- a/bundle/language_ar.properties
+++ b/bundle/language_ar.properties
@@ -74,7 +74,6 @@ angal.admission.levelisunknown                                                  
 angal.admission.male                                                             = ذكر
 angal.admission.malnutrition                                                     = سوء التغذية
 angal.admission.malnutritioncontrol                                              = مكافحة سوء التغذية
-angal.admission.profession                                                       = المهنة
 angal.admission.maritalstatus                                                    = الحالة المدنية
 angal.admission.maternity                                                        = MATERNITY
 angal.admission.merge                                                            = دمج
@@ -155,6 +154,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = فقير
 angal.admission.positive                                                         = إيجابي
 angal.admission.present                                                          = تقديم
+angal.admission.profession                                                       = المهنة
 angal.admission.progressiveinyear                                                = التقدمي في العام *
 angal.admission.result                                                           = النتيجة
 angal.admission.rich                                                             = غني
@@ -489,9 +489,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = يرجى تحديد الاختبار
 angal.lab.pleaseselectapatient                                                   = الرجاء اختيار المريض
 angal.lab.positive                                                               = إيجابي
+angal.lab.print                                                                  = طباعة
 angal.lab.printreport                                                            = طباعة تقرير
 angal.lab.printtable                                                             = طباعة الجدول
-angal.lab.print                                                                  = طباعة
 angal.lab.reactive                                                               = تفاعلي
 angal.lab.registationdate                                                        = تاريخ التسجيل
 angal.lab.result                                                                 = النتيجة
@@ -1133,7 +1133,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = قسم خروج المرضى OPD
 angal.opd.patient                                                                = OH المريض
-angal.opd.patientid                                                              = ID
+angal.opd.patientid                                                              = رقم تعريف المريض
 angal.opd.patientsearch                                                          = بحث
 angal.opd.patientstatus                                                          = حالة
 angal.opd.pleaseinsertattendancedate                                             = يرجى إدراج تاريخ الحضور.
@@ -1211,25 +1211,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = تاريخ الميلاد
 angal.patient.bloodtype                                                          = فصيلة الدم
 angal.patient.bloodtype.unknown                                                  = غير معروف
-angal.patient.profession                                                         = المهنة
-angal.patient.profession.farming                                                 = زراعة
-angal.patient.profession.construction                                            = بناء
-angal.patient.profession.mining                                                  = تعدين
-angal.patient.profession.engineering                                             = هندسة
-angal.patient.profession.medicine                                                = طب
-angal.patient.profession.foodhospitality                                         = الغذاء والضيافة
-angal.patient.profession.homemaker                                               = ربة منزل
-angal.patient.profession.mechanic                                                = ميكانيكي
-angal.patient.profession.business                                                = أعمال
-angal.patient.profession.janitorial                                              = خدمات تنظيف
-angal.patient.profession.other                                                   = مهنة أخرى
-angal.patient.profession.unknown                                                 = غير معروف
-angal.patient.maritalstatus                                                      = الحالة المدنية
-angal.patient.maritalstatusunknown                                               = غير معروف
-angal.patient.maritalstatusdivorced                                              = مطلق 
-angal.patient.maritalstatuswidowed                                               = مترمل 
-angal.patient.maritalstatusmarried                                               = متزوج
-angal.patient.maritalstatussingle                                                = أعزب
 angal.patient.city                                                               = المدينة
 angal.patient.confirmage                                                         = تأكيد العمر؟
 angal.patient.confirmdeletion                                                    = تأكيد الحذف
@@ -1257,6 +1238,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = ادرج عمر صالح
 angal.patient.loadfile                                                           = Load File
 angal.patient.male                                                               = ذكر
+angal.patient.maritalstatus                                                      = الحالة المدنية
+angal.patient.maritalstatusdivorced                                              = مطلق 
+angal.patient.maritalstatusmarried                                               = متزوج
+angal.patient.maritalstatussingle                                                = أعزب
+angal.patient.maritalstatusunknown                                               = غير معروف
+angal.patient.maritalstatuswidowed                                               = مترمل 
 angal.patient.merge.title                                                        = دمج المريض
 angal.patient.modeage                                                            = العمر
 angal.patient.modebdate                                                          = تاريخ الميلاد
@@ -1277,6 +1264,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = محذوفة
 angal.patient.photonotdeleted                                                    = الصورة غير محذوفة
 angal.patient.poor                                                               = فقير
+angal.patient.profession                                                         = المهنة
+angal.patient.profession.business                                                = أعمال
+angal.patient.profession.construction                                            = بناء
+angal.patient.profession.engineering                                             = هندسة
+angal.patient.profession.farming                                                 = زراعة
+angal.patient.profession.foodhospitality                                         = الغذاء والضيافة
+angal.patient.profession.homemaker                                               = ربة منزل
+angal.patient.profession.janitorial                                              = خدمات تنظيف
+angal.patient.profession.mechanic                                                = ميكانيكي
+angal.patient.profession.medicine                                                = طب
+angal.patient.profession.mining                                                  = تعدين
+angal.patient.profession.other                                                   = مهنة أخرى
+angal.patient.profession.unknown                                                 = غير معروف
 angal.patient.quality                                                            = جودة
 angal.patient.rich                                                               = غني
 angal.patient.searchpatient                                                      = بحث المريض
