--- a/bundle/language_en.properties
+++ b/bundle/language_en.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = unknown
 angal.admission.cannotmergeadmittedpatients                                      = Cannot merge admitted patients
 angal.admission.cannotmergewithpendingbills                                      = Cannot merge with pending bills
+angal.admission.check.operationdate                                              = Please check the operations dates
 angal.admission.city                                                             = City
 angal.admission.continue                                                         = Continue?
 angal.admission.controldaten2controldaten1notfound                               = Control date n.2: control date n.1 not found
@@ -69,14 +70,14 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Insurance
 angal.admission.intheselecteddatepatientwasadmittedagain                         = in the selected date patient was admitted again, please insert a valid discharge date
 angal.admission.invalidadmissionperiod                                           = invalid admission period:  
+angal.admission.invalidoperationdate                                             = Invalid operation date:
 angal.admission.levelis                                                          = Level is 
 angal.admission.levelisunknown                                                   = Level is unknown
 angal.admission.male                                                             = Male
 angal.admission.malnutrition                                                     = Malnutrition
 angal.admission.malnutritioncontrol                                              = Malnutrition control
-angal.admission.maternity                                                        = MATERNITY
-angal.admission.profession                                                       = Profession
 angal.admission.maritalstatus                                                    = Marital Status
+angal.admission.maternity                                                        = MATERNITY
 angal.admission.merge                                                            = Merge
 angal.admission.motherisalive                                                    = Mother is alive  
 angal.admission.motherisdead                                                     = Mother is dead 
@@ -155,6 +156,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = Poor
 angal.admission.positive                                                         = Positive
 angal.admission.present                                                          = present
+angal.admission.profession                                                       = Profession
 angal.admission.progressiveinyear                                                = Progressive in year *
 angal.admission.result                                                           = RESULT
 angal.admission.rich                                                             = Rich
@@ -169,6 +171,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Tax Number ID
 angal.admission.telephone                                                        = Telephone
 angal.admission.theadmissionbetween                                              = the admission between  \n
+angal.admission.theoperationdatebetween                                          = the operation date must be between
+angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admission.thepatientwasnotyetbornatselecteddate                            = The patient was not yet born at selected date!!!
 angal.admission.therapy                                                          = Therapy
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = There is more than one pending bill for this patient, continue?
@@ -192,10 +196,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = will be deleted and his/her history transfered to the Patient
 angal.admission.withthisoperationthepatient                                      = With this operation the Patient
 angal.admission.youareeditinganoldadmission                                      = You are editing an old admission
-angal.admission.check.operationdate                                               = Please check the operations dates
-angal.admission.invalidoperationdate                                             = Invalid operation date:
-angal.admission.theoperationdatebetween                                          = the operation date must be between
-angal.admission.theoperationdatenewerthan                                        = the operation date must be more recent than
 angal.admtype.admissiontypebrowsing                                              = Admission type browsing
 angal.admtype.codemaxchars                                                       = Code (max 10 chars)
 angal.admtype.codetoolongmaxchars                                                = Code too long (max 10 chars)
@@ -492,9 +492,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = Please select an exam
 angal.lab.pleaseselectapatient                                                   = Please select a patient
 angal.lab.positive                                                               = Positive
+angal.lab.print                                                                  = Print
 angal.lab.printreport                                                            = Print report
 angal.lab.printtable                                                             = Print table
-angal.lab.print                                                                  = Print
 angal.lab.reactive                                                               = Reactive
 angal.lab.registationdate                                                        = Registation date
 angal.lab.result                                                                 = Result
@@ -1127,8 +1127,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = New OPD registration
 angal.opd.newpatient                                                             = <enter a new patient>
 angal.opd.nextkin                                                                = Next Kin
+angal.opd.nextvisitdate                                                          = Next visit date
 angal.opd.nonote                                                                 = <none>
 angal.opd.noteandsymptom                                                         = Note & Symptom
+angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.opd.notspecified                                                           = not specified
 angal.opd.on                                                                     = on
 angal.opd.opdnumber                                                              = OPD No.
@@ -1136,7 +1138,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Out Patient Department
 angal.opd.patient                                                                = OH Patient
-angal.opd.patientid                                                              = ID
+angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = Search
 angal.opd.patientstatus                                                          = Status
 angal.opd.pleaseinsertattendancedate                                             = Please insert attendance date.
@@ -1156,8 +1158,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sex
 angal.opd.sexm                                                                   = SEX
 angal.opd.visitdate                                                              = Visit Date
-angal.opd.nextvisitdate                                                          = Next visit date
-angal.opd.notpasseddate                                                          = You can not set a passed date for next visit
 angal.operation.allm                                                             = ALL
 angal.operation.codetoolongmaxchars                                              = Code too long (max 10 chars)
 angal.operation.deleteoperation                                                  = Delete operation
@@ -1216,25 +1216,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Birth Date
 angal.patient.bloodtype                                                          = Blood type
 angal.patient.bloodtype.unknown                                                  = Unknown
-angal.patient.profession                                                         = Profession
-angal.patient.profession.farming                                                 = Farming
-angal.patient.profession.construction                                            = Construction
-angal.patient.profession.mining                                                  = Mining
-angal.patient.profession.engineering                                             = Engineering
-angal.patient.profession.medicine                                                = Medicine
-angal.patient.profession.foodhospitality                                         = Food/Hospitality
-angal.patient.profession.homemaker                                               = Homemaker
-angal.patient.profession.mechanic                                                = Mechanic
-angal.patient.profession.business                                                = Business
-angal.patient.profession.janitorial                                              = Janitorial Services
-angal.patient.profession.other                                                   = Other
-angal.patient.profession.unknown                                                 = Unknown
-angal.patient.maritalstatus                                                      = Marital Status
-angal.patient.maritalstatusunknown                                               = Unknown
-angal.patient.maritalstatusdivorced                                              = Divorced
-angal.patient.maritalstatuswidowed                                               = Widowed
-angal.patient.maritalstatusmarried                                               = Married
-angal.patient.maritalstatussingle                                                = Single
 angal.patient.city                                                               = City
 angal.patient.confirmage                                                         = Confirm age?
 angal.patient.confirmdeletion                                                    = Confirm deletion
@@ -1262,6 +1243,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = Insert valid age
 angal.patient.loadfile                                                           = Load File
 angal.patient.male                                                               = Male
+angal.patient.maritalstatus                                                      = Marital Status
+angal.patient.maritalstatusdivorced                                              = Divorced
+angal.patient.maritalstatusmarried                                               = Married
+angal.patient.maritalstatussingle                                                = Single
+angal.patient.maritalstatusunknown                                               = Unknown
+angal.patient.maritalstatuswidowed                                               = Widowed
 angal.patient.merge.title                                                        = Merge Patient
 angal.patient.modeage                                                            = Age
 angal.patient.modebdate                                                          = BirthDate
@@ -1282,6 +1269,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = Deleted
 angal.patient.photonotdeleted                                                    = Photo not deleted
 angal.patient.poor                                                               = Poor
+angal.patient.profession                                                         = Profession
+angal.patient.profession.business                                                = Business
+angal.patient.profession.construction                                            = Construction
+angal.patient.profession.engineering                                             = Engineering
+angal.patient.profession.farming                                                 = Farming
+angal.patient.profession.foodhospitality                                         = Food/Hospitality
+angal.patient.profession.homemaker                                               = Homemaker
+angal.patient.profession.janitorial                                              = Janitorial Services
+angal.patient.profession.mechanic                                                = Mechanic
+angal.patient.profession.medicine                                                = Medicine
+angal.patient.profession.mining                                                  = Mining
+angal.patient.profession.other                                                   = Other
+angal.patient.profession.unknown                                                 = Unknown
 angal.patient.quality                                                            = Quality
 angal.patient.rich                                                               = Rich
 angal.patient.searchpatient                                                      = Search Patient
