--- a/bundle/language_it.properties
+++ b/bundle/language_it.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = sconosciuto
 angal.admission.cannotmergeadmittedpatients                                      = Non è possibile unire pazienti ricoverati
 angal.admission.cannotmergewithpendingbills                                      = Unione non possibile con fatture in sospeso
+angal.admission.check.operationdate                                              = Per favore, controlla la data della/delle operazione/i
 angal.admission.city                                                             = Città
 angal.admission.continue                                                         = Continuare?
 angal.admission.controldaten2controldaten1notfound                               = Data controllo n.2 : data controllo n.1 non trovata
@@ -69,14 +70,14 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Assicurazione
 angal.admission.intheselecteddatepatientwasadmittedagain                         = alla data selezionata il paziente è stato ricoverato di nuovo, prego inserire una data dimissione valida
 angal.admission.invalidadmissionperiod                                           = periodo di ricovero non valido:
+angal.admission.invalidoperationdate                                             = Data di funzionamento non valida:
 angal.admission.levelis                                                          = Il livello è
 angal.admission.levelisunknown                                                   = Livello sconosciuto
 angal.admission.male                                                             = Maschio
 angal.admission.malnutrition                                                     = Malnutrizione
 angal.admission.malnutritioncontrol                                              = Controllo malnutrizione
-angal.admission.maternity                                                        = MATERNITA'
-angal.admission.profession                                                       = Professione
 angal.admission.maritalstatus                                                    = Stato Civile
+angal.admission.maternity                                                        = MATERNITA'
 angal.admission.merge                                                            = Unisci
 angal.admission.motherisalive                                                    = Madre viva
 angal.admission.motherisdead                                                     = Madre morta
@@ -155,6 +156,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = Povero
 angal.admission.positive                                                         = Positivo
 angal.admission.present                                                          = presente
+angal.admission.profession                                                       = Professione
 angal.admission.progressiveinyear                                                = Progressivo in anni *
 angal.admission.result                                                           = ESITO
 angal.admission.rich                                                             = Ricco
@@ -169,6 +171,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Codice Fiscale
 angal.admission.telephone                                                        = Telefono
 angal.admission.theadmissionbetween                                              = il ricovero tra  \n
+angal.admission.theoperationdatebetween                                          = la data di operazione deve essere compresa tra
+angal.admission.theoperationdatenewerthan                                        = la data di operazione deve essere più recente di
 angal.admission.thepatientwasnotyetbornatselecteddate                            = Il paziente non era ancora nato alla data selezionata!!!
 angal.admission.therapy                                                          = Terapia
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = C'è più di un fattura in sospeso per questo paziente, continuare?
@@ -192,10 +196,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = verrà eliminato ed il suo storico trasferito al Paziente
 angal.admission.withthisoperationthepatient                                      = Con questa operazione il Paziente
 angal.admission.youareeditinganoldadmission                                      = Stai modificando un vecchio ricovero
-angal.admission.check.operationdate                                               = Per favore, controlla la data della/delle operazione/i
-angal.admission.invalidoperationdate                                             = Data di funzionamento non valida:
-angal.admission.theoperationdatebetween                                          = la data di operazione deve essere compresa tra
-angal.admission.theoperationdatenewerthan                                        = la data di operazione deve essere più recente di
 angal.admtype.admissiontypebrowsing                                              = Lista tipologie ricovero
 angal.admtype.codemaxchars                                                       = Codice (max 10 caratteri)
 angal.admtype.codetoolongmaxchars                                                = Codice troppo lungo (max 10 caratteri)
@@ -492,9 +492,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = Prego selezionare un esame
 angal.lab.pleaseselectapatient                                                   = Selezionare un paziente
 angal.lab.positive                                                               = Positivo
+angal.lab.print                                                                  = Stampa
 angal.lab.printreport                                                            = Stampa rapporto
 angal.lab.printtable                                                             = Stampa tabella
-angal.lab.print                                                                  = Stampa
 angal.lab.reactive                                                               = Reattivo
 angal.lab.registationdate                                                        = Data registrazione
 angal.lab.result                                                                 = Risultato
@@ -1127,8 +1127,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = Nuova registrazione OPD
 angal.opd.newpatient                                                             = <Inserire un nuovo paziente>
 angal.opd.nextkin                                                                = Parente più vicino
+angal.opd.nextvisitdate                                                          = Data prossima visita
 angal.opd.nonote                                                                 = <nessuna>
 angal.opd.noteandsymptom                                                         = Note & Sintomi
+angal.opd.notpasseddate                                                          = Non puoi impostare una data nel passato come prossima visita
 angal.opd.notspecified                                                           = non specificato
 angal.opd.on                                                                     = il
 angal.opd.opdnumber                                                              = OPD Nr.
@@ -1136,7 +1138,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = Il numero OPD deve essere un intero positivo
 angal.opd.opdoutpatientdepartment                                                = OPD - Ambulatori
 angal.opd.patient                                                                = OH PAZIENTE
-angal.opd.patientid                                                              = ID
+angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = Cerca
 angal.opd.patientstatus                                                          = STATO
 angal.opd.pleaseinsertattendancedate                                             = Prego inserire data assistenza.
@@ -1156,8 +1158,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sesso
 angal.opd.sexm                                                                   = SESSO
 angal.opd.visitdate                                                              = Data Visita
-angal.opd.nextvisitdate                                                          = Data prossima visita
-angal.opd.notpasseddate                                                          = Non puoi impostare una data nel passato come prossima visita
 angal.operation.allm                                                             = TUTTI
 angal.operation.codetoolongmaxchars                                              = Codice troppo lungo (max 10 caratteri)
 angal.operation.deleteoperation                                                  = Elimina intervento
@@ -1216,25 +1216,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Data di nascita
 angal.patient.bloodtype                                                          = Gruppo Sanguigno
 angal.patient.bloodtype.unknown                                                  = Sconosciuto
-angal.patient.profession                                                         = Professione
-angal.patient.profession.farming                                                 = Agricoltura
-angal.patient.profession.construction                                            = Edilizia
-angal.patient.profession.mining                                                  = Miniera
-angal.patient.profession.engineering                                             = Ingegneria
-angal.patient.profession.medicine                                                = Medicina
-angal.patient.profession.foodhospitality                                         = Ristorazione
-angal.patient.profession.homemaker                                               = Casalinga
-angal.patient.profession.mechanic                                                = Meccanica
-angal.patient.profession.business                                                = Business
-angal.patient.profession.janitorial                                              = Assistenza Sociale
-angal.patient.profession.other                                                   = Altro
-angal.patient.profession.unknown                                                 = Sconosciuto
-angal.patient.maritalstatus                                                      = Stato Civile
-angal.patient.maritalstatusunknown                                               = Sconosciuto
-angal.patient.maritalstatusdivorced                                              = Divorziato
-angal.patient.maritalstatuswidowed                                               = Vedovo
-angal.patient.maritalstatusmarried                                               = Sposato
-angal.patient.maritalstatussingle                                                = Singolo
 angal.patient.city                                                               = Città
 angal.patient.confirmage                                                         = Confermi l'età inserita?
 angal.patient.confirmdeletion                                                    = Conferma eliminazione
@@ -1262,6 +1243,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = Inserire Età valida
 angal.patient.loadfile                                                           = Carica File
 angal.patient.male                                                               = Maschio
+angal.patient.maritalstatus                                                      = Stato Civile
+angal.patient.maritalstatusdivorced                                              = Divorziato
+angal.patient.maritalstatusmarried                                               = Sposato
+angal.patient.maritalstatussingle                                                = Singolo
+angal.patient.maritalstatusunknown                                               = Sconosciuto
+angal.patient.maritalstatuswidowed                                               = Vedovo
 angal.patient.merge.title                                                        = Fondi Paziente
 angal.patient.modeage                                                            = Età
 angal.patient.modebdate                                                          = Data di nascita
@@ -1282,6 +1269,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = Eliminata
 angal.patient.photonotdeleted                                                    = Photo non eliminata
 angal.patient.poor                                                               = Povero
+angal.patient.profession                                                         = Professione
+angal.patient.profession.business                                                = Business
+angal.patient.profession.construction                                            = Edilizia
+angal.patient.profession.engineering                                             = Ingegneria
+angal.patient.profession.farming                                                 = Agricoltura
+angal.patient.profession.foodhospitality                                         = Ristorazione
+angal.patient.profession.homemaker                                               = Casalinga
+angal.patient.profession.janitorial                                              = Assistenza Sociale
+angal.patient.profession.mechanic                                                = Meccanica
+angal.patient.profession.medicine                                                = Medicina
+angal.patient.profession.mining                                                  = Miniera
+angal.patient.profession.other                                                   = Altro
+angal.patient.profession.unknown                                                 = Sconosciuto
 angal.patient.quality                                                            = Qualità
 angal.patient.rich                                                               = Ricco
 angal.patient.searchpatient                                                      = Cerca Paziente
