--- a/bundle/language_es.properties
+++ b/bundle/language_es.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = desconocido
 angal.admission.cannotmergeadmittedpatients                                      = No se puede fusionar los pacientes ingresados
 angal.admission.cannotmergewithpendingbills                                      = No se puede combinar con las facturas pendientes
+angal.admission.check.operationdate                                              = Por favor verifique la fecha de la intervención
 angal.admission.city                                                             = Ciudad
 angal.admission.continue                                                         = Continuar?
 angal.admission.controldaten2controldaten1notfound                               = Fecha control n.2 : fecha control n.1 no encontrada
@@ -69,6 +70,7 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Aseguración
 angal.admission.intheselecteddatepatientwasadmittedagain                         = en la fecha seleccionada el paciente ha sido hospitalizado de nuevo, Por favor digitar una fecha egreso válida
 angal.admission.invalidadmissionperiod                                           = período de hospitalización no válido:
+angal.admission.invalidoperationdate                                             = Fecha de operación inválida:
 angal.admission.levelis                                                          = El nivel  es
 angal.admission.levelisunknown                                                   = Nivel desconocido
 angal.admission.male                                                             = Hombre
@@ -167,6 +169,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = Código   Identificación
 angal.admission.telephone                                                        = Teléfono
 angal.admission.theadmissionbetween                                              = el hospitalización entre  \n
+angal.admission.theoperationdatebetween                                          = la fecha de la operación debe estar entre
+angal.admission.theoperationdatenewerthan                                        = la fecha de la operación debe ser más reciente que
 angal.admission.thepatientwasnotyetbornatselecteddate                            = El paciente no había nacido en la fecha seleccionada!!!
 angal.admission.therapy                                                          = Terapia
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = Hay mós de una factura pendiente para este paciente, ócontinuar?
@@ -190,10 +194,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = Sera eliminado y su Historia trasferido al Paciente
 angal.admission.withthisoperationthepatient                                      = Con esta operación el Paciente
 angal.admission.youareeditinganoldadmission                                      = Modificando una anterior hospitalización
-angal.admission.check.operationdate                                               = Por favor verifique la fecha de la intervención
-angal.admission.invalidoperationdate                                             = Fecha de operación inválida:
-angal.admission.theoperationdatebetween                                          = la fecha de la operación debe estar entre
-angal.admission.theoperationdatenewerthan                                        = la fecha de la operación debe ser más reciente que
 angal.admtype.admissiontypebrowsing                                              = Lista tipologías de hospitalización
 angal.admtype.codemaxchars                                                       = Código (máx. 10 caracteres)
 angal.admtype.codetoolongmaxchars                                                = Código muy largo (máx. 10 caracteres)
@@ -490,9 +490,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = Por favor seleccionar un examen
 angal.lab.pleaseselectapatient                                                   = Seleccionar un paciente
 angal.lab.positive                                                               = Positivo
+angal.lab.print                                                                  = Imprimir
 angal.lab.printreport                                                            = Imprimir reporte
 angal.lab.printtable                                                             = Imprimir tabla
-angal.lab.print                                                                  = Imprimir
 angal.lab.reactive                                                               = Reactivo
 angal.lab.registationdate                                                        = Fecha grabación
 angal.lab.result                                                                 = Resultado
@@ -1134,7 +1134,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = No. OPD debe ser un número
 angal.opd.opdoutpatientdepartment                                                = OPD Departamento Egreso Paciente
 angal.opd.patient                                                                = OH PACIENTE
-angal.opd.patientid                                                              = Identificación
+angal.opd.patientid                                                              = Identificación Paciente
 angal.opd.patientsearch                                                          = Buscar
 angal.opd.patientstatus                                                          = ESTADO
 angal.opd.pleaseinsertattendancedate                                             = Por favor digitar fecha asistencia.
