--- a/bundle/language_fr.properties
+++ b/bundle/language_fr.properties
@@ -22,6 +22,7 @@ angal.admission.bloodtypeis                                                     
 angal.admission.bloodtypeisunknown                                               = inconnu
 angal.admission.cannotmergeadmittedpatients                                      = Impossible de fusionner les patients admis
 angal.admission.cannotmergewithpendingbills                                      = Impossible de fusionner avec les factures en suspens
+angal.admission.check.operationdate                                              = Vérifier les dates des opérations
 angal.admission.city                                                             = Ville
 angal.admission.continue                                                         = continue
 angal.admission.controldaten2controldaten1notfound                               = Date de controle n.2: date de controle n.1 non trouvée
@@ -69,14 +70,14 @@ angal.admission.ininserteddatepatientwasalreadyadmitted                         
 angal.admission.insurance                                                        = Assurance
 angal.admission.intheselecteddatepatientwasadmittedagain                         = é la date selezionée le patient a étè hospitalisé de nouveau, insérer une date de sortie valide
 angal.admission.invalidadmissionperiod                                           = periode de hospitalisation non valide:
+angal.admission.invalidoperationdate                                             = Date d'opération non valide:
 angal.admission.levelis                                                          = Le niveau est'
 angal.admission.levelisunknown                                                   = Niveau inconnu
 angal.admission.male                                                             = Masculin
 angal.admission.malnutrition                                                     = malnutrition
 angal.admission.malnutritioncontrol                                              = Controle malnutrition
-angal.admission.maternity                                                        = MATERNITY
-angal.admission.profession                                                       = Profession
 angal.admission.maritalstatus                                                    = État civil
+angal.admission.maternity                                                        = MATERNITY
 angal.admission.merge                                                            = Fusionner
 angal.admission.motherisalive                                                    = Mére vive
 angal.admission.motherisdead                                                     = Mére morte
@@ -155,6 +156,7 @@ angal.admission.pleaseselecttwopatients                                         
 angal.admission.poor                                                             = Pauvre
 angal.admission.positive                                                         = Positif
 angal.admission.present                                                          = présent
+angal.admission.profession                                                       = Profession
 angal.admission.progressiveinyear                                                = Progressif en années *
 angal.admission.result                                                           = RéSULTAT
 angal.admission.rich                                                             = Riche
@@ -169,6 +171,8 @@ angal.admission.stop                                                            
 angal.admission.taxcode                                                          = NID
 angal.admission.telephone                                                        = Téléphone
 angal.admission.theadmissionbetween                                              = l'hospitalisation entre \n
+angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
+angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
 angal.admission.thepatientwasnotyetbornatselecteddate                            = Le patient n'a pas encore né à la date sélectionnée!!!
 angal.admission.therapy                                                          = Therapie
 angal.admission.thereismorethanonependingbillforthispatientcontinue              = Il y a plus que une facture ouverte pour ce patient, continue?
@@ -192,10 +196,6 @@ angal.admission.weneed                                                          
 angal.admission.willbedeletedandhisherhistorytransferedtothepatient              = sera supprimè et son/sienne histoire transferè au Patient
 angal.admission.withthisoperationthepatient                                      = avec cette operation le Patient
 angal.admission.youareeditinganoldadmission                                      = Tu vais modifié un ancien hospitalisation
-angal.admission.check.operationdate                                               = Vérifier les dates des opérations
-angal.admission.invalidoperationdate                                             = Date d'opération non valide:
-angal.admission.theoperationdatebetween                                          = la date de l'opération doit être comprise entre
-angal.admission.theoperationdatenewerthan                                        = la date de l'opération doit être plus récente que
 angal.admtype.admissiontypebrowsing                                              = Liste typologie hospitalisation
 angal.admtype.codemaxchars                                                       = Code (max 10 caractère)
 angal.admtype.codetoolongmaxchars                                                = Code trop long (max 10 caractère)
@@ -492,9 +492,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = Prière de sélectionner un examen
 angal.lab.pleaseselectapatient                                                   = Please select a patient
 angal.lab.positive                                                               = Positif
+angal.lab.print                                                                  = Estampage
 angal.lab.printreport                                                            = Estampage rapport
 angal.lab.printtable                                                             = Estampage tableau
-angal.lab.print                                                                  = Estampage
 angal.lab.reactive                                                               = Réactif
 angal.lab.registationdate                                                        = Date enregistrement
 angal.lab.result                                                                 = Résultat
@@ -1127,8 +1127,10 @@ angal.opd.newattendance                                                         
 angal.opd.newopdregistration                                                     = Nouvelle régistrement DDP
 angal.opd.newpatient                                                             = nouveau patient
 angal.opd.nextkin                                                                = Next Kin
+angal.opd.nextvisitdate                                                          = Date de prochain rendez-vous
 angal.opd.nonote                                                                 = <none>
 angal.opd.noteandsymptom                                                         = Note & Symptom
+angal.opd.notpasseddate                                                          = Vous ne pouvez pas entrer une date passée pour la prochaine visite
 angal.opd.notspecified                                                           = Pas spécifiè
 angal.opd.on                                                                     = on
 angal.opd.opdnumber                                                              = numero OPD
@@ -1136,7 +1138,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = DDP Département Dimission patient
 angal.opd.patient                                                                = patient
-angal.opd.patientid                                                              = ID
+angal.opd.patientid                                                              = Pat.ID
 angal.opd.patientsearch                                                          = cHERCHEZ
 angal.opd.patientstatus                                                          = ETAT PATIENT
 angal.opd.pleaseinsertattendancedate                                             = Insérez une date assistence
@@ -1156,8 +1158,6 @@ angal.opd.selectsex                                                             
 angal.opd.sex                                                                    = Sexe
 angal.opd.sexm                                                                   = SEXE
 angal.opd.visitdate                                                              = date visites
-angal.opd.nextvisitdate                                                          = Date de prochain rendez-vous
-angal.opd.notpasseddate                                                          = Vous ne pouvez pas entrer une date passée pour la prochaine visite
 angal.operation.allm                                                             = TOUS
 angal.operation.codetoolongmaxchars                                              = Code trop long (max 10 caractère)
 angal.operation.deleteoperation                                                  = Eliminez l'intervention
@@ -1216,25 +1216,6 @@ angal.patient.alive                                                             
 angal.patient.birthdate                                                          = Date de naissance
 angal.patient.bloodtype                                                          = Type sanguin
 angal.patient.bloodtype.unknown                                                  = Inconnu
-angal.patient.profession                                                         = Profession
-angal.patient.profession.farming                                                 = Agriculture
-angal.patient.profession.construction                                            = Bâtiment
-angal.patient.profession.mining                                                  = Exploitation minière
-angal.patient.profession.engineering                                             = Ingénierie
-angal.patient.profession.medicine                                                = Médecine
-angal.patient.profession.foodhospitality                                         = Nourriture/Hospitalité
-angal.patient.profession.homemaker                                               = Ménagère
-angal.patient.profession.mechanic                                                = Mécanicien
-angal.patient.profession.business                                                = Affaires
-angal.patient.profession.janitorial                                              = Services de conciergerie
-angal.patient.profession.other                                                   = Autre
-angal.patient.profession.unknown                                                 = Inconnu
-angal.patient.maritalstatus                                                      = État Civil
-angal.patient.maritalstatusunknown                                               = Inconnu
-angal.patient.maritalstatusdivorced                                              = Divorcé
-angal.patient.maritalstatuswidowed                                               = Veuf
-angal.patient.maritalstatusmarried                                               = Marié
-angal.patient.maritalstatussingle                                                = Chaque
 angal.patient.city                                                               = Ville
 angal.patient.confirmage                                                         = Confirmez l' age?
 angal.patient.confirmdeletion                                                    = Confirmez suppression
@@ -1262,6 +1243,12 @@ angal.patient.insertsecondname                                                  
 angal.patient.insertvalidage                                                     = Insérez l'àge valide
 angal.patient.loadfile                                                           = Load File
 angal.patient.male                                                               = Masculin
+angal.patient.maritalstatus                                                      = État Civil
+angal.patient.maritalstatusdivorced                                              = Divorcé
+angal.patient.maritalstatusmarried                                               = Marié
+angal.patient.maritalstatussingle                                                = Chaque
+angal.patient.maritalstatusunknown                                               = Inconnu
+angal.patient.maritalstatuswidowed                                               = Veuf
 angal.patient.merge.title                                                        = Unifier Patient
 angal.patient.modeage                                                            = Age
 angal.patient.modebdate                                                          = Date de naissance
@@ -1282,6 +1269,19 @@ angal.patient.patientselection                                                  
 angal.patient.photodeleted                                                       = Photo supprimé
 angal.patient.photonotdeleted                                                    = Photo non supprimé
 angal.patient.poor                                                               = Pauvre
+angal.patient.profession                                                         = Profession
+angal.patient.profession.business                                                = Affaires
+angal.patient.profession.construction                                            = Bâtiment
+angal.patient.profession.engineering                                             = Ingénierie
+angal.patient.profession.farming                                                 = Agriculture
+angal.patient.profession.foodhospitality                                         = Nourriture/Hospitalité
+angal.patient.profession.homemaker                                               = Ménagère
+angal.patient.profession.janitorial                                              = Services de conciergerie
+angal.patient.profession.mechanic                                                = Mécanicien
+angal.patient.profession.medicine                                                = Médecine
+angal.patient.profession.mining                                                  = Exploitation minière
+angal.patient.profession.other                                                   = Autre
+angal.patient.profession.unknown                                                 = Inconnu
 angal.patient.quality                                                            = qualité
 angal.patient.rich                                                               = Riche
 angal.patient.searchpatient                                                      = Cherchez Patient
