--- a/bundle/language_pt.properties
+++ b/bundle/language_pt.properties
@@ -487,9 +487,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = Selecione o exame
 angal.lab.pleaseselectapatient                                                   = Por favor selecione um paciente
 angal.lab.positive                                                               = Positivo
+angal.lab.print                                                                  = Imprimir
 angal.lab.printreport                                                            = Imprimir relatório
 angal.lab.printtable                                                             = Imprimir tabela
-angal.lab.print                                                                  = Imprimir
 angal.lab.reactive                                                               = Reactivo
 angal.lab.registationdate                                                        = Data de registro
 angal.lab.result                                                                 = Resultado
@@ -1131,7 +1131,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = Departamento de paciente OPD Out
 angal.opd.patient                                                                = Patient
-angal.opd.patientid                                                              = ID
+angal.opd.patientid                                                              = ID Pac.
 angal.opd.patientsearch                                                          = Pesquisa
 angal.opd.patientstatus                                                          = Estatuto
 angal.opd.pleaseinsertattendancedate                                             = Por favor, insira a data de comparecimento.
