--- a/bundle/language_sw.properties
+++ b/bundle/language_sw.properties
@@ -487,9 +487,9 @@ angal.lab.pleaseselectamaterial                                                 
 angal.lab.pleaseselectanexam                                                     = Tafadhali chagua uchunguzi
 angal.lab.pleaseselectapatient                                                   = Tafadhali chagua mgonjwa
 angal.lab.positive                                                               = sahihi
+angal.lab.print                                                                  = Piga Chapa
 angal.lab.printreport                                                            = Piga Chapa repoti
 angal.lab.printtable                                                             = Piga chapa mraba
-angal.lab.print                                                                  = Piga Chapa
 angal.lab.reactive                                                               = iko na hisia
 angal.lab.registationdate                                                        = Tarehe ya kujiandikisha
 angal.lab.result                                                                 = Matokeo
@@ -1131,7 +1131,7 @@ angal.opd.opdnumberalreadyexist                                                 
 angal.opd.opdnumbermustbeanumber                                                 = OPD No. must be a number
 angal.opd.opdoutpatientdepartment                                                = OPD Kitengo cha wagonjwa waliolazwa
 angal.opd.patient                                                                = OH Mgonjwa
-angal.opd.patientid                                                              = ID
+angal.opd.patientid                                                              = Mgonjwa.ID
 angal.opd.patientsearch                                                          = Tafuta
 angal.opd.patientstatus                                                          = Hali
 angal.opd.pleaseinsertattendancedate                                             = Tafadhali weka tarehe ya kuhudumiwa.
